cabal-version: 3.0

name: supply-chain-parsing
version: 0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: supply-chain-parsing

    default-extensions:
        DataKinds
        NoImplicitPrelude
        PatternSynonyms
        TypeFamilies

    build-depends:
        base
      , containers
      , hedgehog
      , ListLike
      , supply-chain
      , text

    exposed-modules:
        Cursor.Advancement
        Cursor.Interface

        Integer
        Integer.Positive
        Integer.Positive.Unsafe
        Integer.Sign
        Integer.Signed

        Chunk
        Chunk.Gen
        Chunk.ListLike
        Chunk.ListLike.Core
        Chunk.Text
        Chunk.Text.Core
