cabal-version: 3.0

name: supply-chain-parsing
version: 0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: supply-chain-parsing

    default-extensions:
        DataKinds
        NoImplicitPrelude
        PatternSynonyms
        TypeFamilies

    build-depends:
      , base
      , block-class
      , containers
      , hedgehog
      , integer-types
      , ListLike
      , quaalude ^>= 0.0
      , supply-chain
      , text

    exposed-modules:
        Cursor.Advancement
        Cursor.Interface
        Chunk.Gen
