cabal-version: 3.0

name: supply-chain
version: 0

license: Apache-2.0
license-file: license.txt

extra-doc-files: readme.md

common base
    default-language: GHC2021

    ghc-options:
        -Wall
        -Wmissing-deriving-strategies
        -fdefer-typed-holes

    default-extensions:
        BlockArguments
        DerivingStrategies
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        NoMonomorphismRestriction
        PatternSynonyms
        TypeFamilies

    build-depends:
        base ^>= 4.16
      , supply-chain-core ^>= 0.0

library
    import: base
    hs-source-dirs: supply-chain
    exposed-modules:
        SupplyChain
        SupplyChain.Alter
        SupplyChain.Effect
        SupplyChain.Job
        SupplyChain.JobAndVendor
        SupplyChain.Referral
        SupplyChain.Unit
        SupplyChain.Vendor
