cabal-version: 3.0

name: supply-cursor
version: 0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: supply-cursor

    default-extensions:
        DataKinds
        NoImplicitPrelude
        PatternSynonyms
        TypeFamilies

    build-depends:
      , base
      , block-class
      , containers
      , hedgehog
      , integer-types
      , ListLike
      , quaalude ^>= 0.0
      , supply-chain
      , supply-next ^>= 0.0.1
      , text

    exposed-modules:
        Cursor.Interface
        Cursor.Interface.Type

        Cursor.Feed.Type

        Cursor.Transcoder.Type

        Cursor.Reader.Type
