cabal-version: 3.0

name: supply-cursor
version: 0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: supply-cursor

    default-extensions:
        BlockArguments
        DataKinds
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        TypeFamilies

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class
      , containers ^>= 0.6.5
      , hedgehog
      , integer-types ^>= 0.0
      , quaalude ^>= 0.0
      , supply-chain ^>= 0.0
      , supply-next ^>= 0.0.1
      , text ^>= 1.2.4 || ^>= 2.0

    exposed-modules:
        Cursor.Interface
        Cursor.Interface.Type
        Cursor.Interface.Class

        Cursor.Feed.Type
        Cursor.Feed.Examples

        Cursor.Transcoder.Type

        Cursor.Reader.Type
