cabal-version: 3.0

name: supply-cursor
version: 0.0.0.0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: supply-cursor

    default-extensions:
        BlockArguments
        DataKinds
        DerivingStrategies
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        TypeFamilies

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , block-class ^>= 0.0
      , containers ^>= 0.6.5
      , hedgehog ^>= 1.2
      , integer-types ^>= 0.0
      , mtl ^>= 2.3.1
      , optics ^>= 0.4.2
      , quaalude ^>= 0.0
      , supply-chain ^>= 0.0
      , supply-next == 0.0.1.*
      , supply-pushback ^>= 0.0
      , text ^>= 1.2.4 || ^>= 2.0

    exposed-modules:
        Cursor.Interface
        Cursor.Interface.Type
        Cursor.Interface.Class
        Cursor.Interface.Utilities

        Cursor.Feed.Type
        Cursor.Feed.Examples
        Cursor.Feed.Examples.Pushback

        Cursor.Transcoder.Type

        Cursor.Reader.Type
        Cursor.Reader.Examples

        Cursor.ResetReader.Type
        Cursor.ResetReader.Examples
        Cursor.ResetReader.Examples.AmountRemaining
        Cursor.ResetReader.Examples.Take
        Cursor.ResetReader.Utilities
        Cursor.ResetReader.Utilities.LookAhead
        Cursor.ResetReader.Utilities.With

        Cursor.Counting
        Cursor.Counting.Type
        Cursor.Counting.Examples
