cabal-version: 3.0

name: supply-pushback
version: 0.0.0.0

library
    default-language: GHC2021
    ghc-options: -Wall
    hs-source-dirs: supply-pushback

    default-extensions:
        BlockArguments
        DataKinds
        FunctionalDependencies
        LambdaCase
        NoImplicitPrelude
        PatternSynonyms
        TypeFamilies

    build-depends:
      , base ^>= 4.16 || ^>= 4.17
      , containers ^>= 0.6.5
      , hedgehog ^>= 1.2
      , integer-types ^>= 0.1
      , mtl ^>= 2.3.1
      , optics ^>= 0.4.2
      , quaalude ^>= 0.0
      , supply-chain ^>= 0.0
      , supply-next == 0.0.1.*
      , text ^>= 1.2.4 || ^>= 2.0

    exposed-modules:
        Pushback

        Pushback.Interface
        Pushback.Interface.Type
        Pushback.Interface.Class

        Pushback.Stack
        Pushback.Stack.Type
        Pushback.Stack.Examples

        Pushback.Buffer
        Pushback.Buffer.Type
        Pushback.Buffer.Examples

        Pushback.StackContainer
        Pushback.StackContainer.Type
        Pushback.StackContainer.Examples
        Pushback.StackContainer.Utilities

        Pushback.StackEffect
        Pushback.StackEffect.Type
        Pushback.StackEffect.Examples
